; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_status.c_status_reset.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_status.c_status_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.status_output = type { i64 }

@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @status_reset(%struct.status_output* %0) #0 {
  %2 = alloca %struct.status_output*, align 8
  store %struct.status_output* %0, %struct.status_output** %2, align 8
  %3 = load %struct.status_output*, %struct.status_output** %2, align 8
  %4 = icmp ne %struct.status_output* %3, null
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load %struct.status_output*, %struct.status_output** %2, align 8
  %7 = getelementptr inbounds %struct.status_output, %struct.status_output* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sge i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %5
  %11 = load %struct.status_output*, %struct.status_output** %2, align 8
  %12 = getelementptr inbounds %struct.status_output, %struct.status_output* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* @SEEK_SET, align 4
  %15 = call i32 @lseek(i64 %13, i32 0, i32 %14)
  br label %16

16:                                               ; preds = %10, %5, %1
  ret void
}

declare dso_local i32 @lseek(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
